<resources>
    <string name="app_name">Avaci</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Avaci Mobile Inventory"</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strWelcomeUser">Welcome to Avaci!</string>
    <string name="strWelcomeMsg">This App displays latest mobile phones available in the market</string>
    <string name="takeMeThereBtn">Take Me There</string>
    <string name="fragment_welcome">Welcome</string>

    <string name="strInstruction1">Click the button below to view the mobile phones in the Mobile List screen.</string>

    <string name="strInstruction2">Click the \'+\' button in the Mobile List screen to add a new phone to the mobile list.</string>
    <string name="strViewMobileList">View Mobile List</string>
    <string name="strMobileList">Mobile List</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="strFeature">Feature</string>
    <string name="logout">Logout</string>
    <string name="validation_mobile_detail_message">Please enter all the fields</string>
    <string name="mobileDetail">Mobile Detail</string>
    <string name="strInstructionTitle">Instruction</string>
    <string name="strCompany">Company</string>
    <string name="strModel">Model</string>
    <string name="strOSVersion">OS Version</string>
    <string name="strAddMobile">Add Mobile</string>

</resources>
