<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.mobilestore.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.mobilestore.WelcomeFragment"
        android:label="@string/fragment_welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
           />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.mobilestore.InstructionFragment"
        android:label="@string/strInstructionTitle"
        tools:layout="@layout/fragment_instruction" >
        <action
            android:id="@+id/action_instructionFragment_to_mobileFragment"
            app:destination="@id/mobileFragment"
            app:popUpTo="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/mobileFragment"
        android:name="com.udacity.mobilestore.MobileFragment"
        android:label="@string/strMobileList"
        tools:layout="@layout/fragment_mobile" >
        <action
            android:id="@+id/action_mobileFragment_to_mobileDetailFragment"
            app:destination="@id/mobileDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
          />
        <action
            android:id="@+id/action_mobileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/mobileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/mobileDetailFragment"
        android:name="com.udacity.mobilestore.MobileDetailFragment"
        android:label="@string/mobileDetail" >
        <action
            android:id="@+id/action_mobileDetailFragment_to_mobileFragment"
            app:destination="@id/mobileFragment"
            app:popUpTo="@id/mobileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpToInclusive="true"
           />
    </fragment>
</navigation>